# nenjo

./: .dockerignore  .env.sample  .release-plz.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  install.sh  justfile  nenjoup  rust-toolchain.toml
crates/crypto-auth/: Cargo.toml  README.md
crates/crypto-auth/src/: key_provider.rs  lib.rs
crates/crypto-auth/src/provider/: mod.rs  storage.rs  types.rs  wrap.rs
crates/eventbus/: CHANGELOG.md  Cargo.toml  README.md
crates/eventbus/src/: bus.rs  codec.rs  error.rs  lib.rs  nats.rs  transport.rs
crates/events/: CHANGELOG.md  Cargo.toml  README.md
crates/events/src/: capability.rs  command.rs  content.rs  envelope.rs  lib.rs  manifest.rs  response.rs  schedule.rs  subject.rs
crates/harness/: .dockerignore  Cargo.toml  README.md
crates/harness/src/: builder.rs  chat_history.rs  doc_sync.rs  domain.rs  error.rs  event_bridge.rs  events.rs  execution_context.rs  execution_trace.rs  external_mcp.rs  handle.rs  harness.rs  lib.rs  loader.rs  manifest.rs  mcp_client.rs  preview.rs  prompt.rs  registry.rs  request.rs  session.rs  state.rs  stream.rs  task_runtime.rs  task_session.rs  tools.rs  trace.rs
crates/harness/src/config/: mod.rs  schema.rs
crates/harness/src/handlers/: chat.rs  cron.rs  crypto.rs  domain.rs  event_bridge.rs  heartbeat.rs  manifest.rs  mod.rs  repo.rs  task.rs
crates/harness/src/local_runtime/: coordinator.rs  event_store.rs  lease_store.rs  mod.rs  record_store.rs  runtime.rs  task_runtime_store.rs
crates/harness/src/providers/: mod.rs  registry.rs
crates/harness/src/run/: chat.rs  cron.rs  heartbeat.rs  mod.rs  task.rs
crates/harness/src/security/: audit.rs  detect.rs  mod.rs  policy.rs
crates/harness/src/task_runtime/: runtime.rs  store.rs  tests.rs  types.rs
crates/harness/tests/: local_runtime_api.rs  manifest_black_box.rs
crates/knowledge/: Cargo.toml  README.md  manifest.yaml
crates/knowledge/docs/domain/: nenjo.md  sdk.md
crates/knowledge/docs/guide/: abilities.md  councils.md  knowledge-packs.md  memory.md  projects.md  prompt-structuring.md  routines.md
crates/knowledge/docs/reference/: template-vars.md
crates/knowledge/docs/taxonomy/: resource_surfaces.md  tasks.md  workflow_patterns.md
crates/knowledge/src/: lib.rs  search.rs  tools.rs
crates/knowledge/src/builtin/: embedded.rs  generated.rs  mod.rs  search.rs  types.rs
crates/knowledge/tests/: builtin_knowledge.rs
crates/models/: Cargo.toml  README.md
crates/models/src/: anthropic.rs  audio_data_uri.rs  capabilities.rs  compatible.rs  gemini.rs  lib.rs  native.rs  ollama.rs  openai.rs  openai_tools.rs  openrouter.rs  reliable.rs  router.rs  traits.rs  xai.rs
crates/nenjo/: CHANGELOG.md  Cargo.toml  README.md
crates/nenjo-platform/: Cargo.toml
crates/nenjo-platform/src/: backend.rs  client.rs  lib.rs
crates/nenjo-platform/src/local/: executor.rs
crates/nenjo-platform/src/manifest_mcp/: abilities.rs  agents.rs  backend.rs  contract.rs  mod.rs  models.rs  params.rs  project_documents.rs  projects.rs  results.rs  routines.rs  tools.rs
crates/nenjo/knowledge/: manifest.yaml
crates/nenjo/src/: arguments.rs  commands.rs  config.rs  hooks.rs  input.rs  knowledge.rs  knowledge_tools.rs  lib.rs  manifest.rs  package_resolve.rs  repo_manifest.rs  skills.rs  slug.rs  tools.rs  types.rs
crates/nenjo/src/agents/: abilities.rs  ability_sessions.rs  async_ops.rs  builder.rs  delegation.rs  error.rs  instance.rs  mod.rs  prompts.rs  respond.rs
crates/nenjo/src/builtin/: embedded.rs  generated.rs  mod.rs  search.rs  types.rs
crates/nenjo/src/client/: error.rs  http.rs  mod.rs  types.rs
crates/nenjo/src/context/: documents.rs  mod.rs  renderer.rs  types.rs  var_defs.rs  vars.rs
crates/nenjo/src/manifest/: local.rs  store.rs
crates/nenjo/src/mcp/: client.rs  mod.rs  platform.rs
crates/nenjo/src/memory/: markdown.rs  mod.rs  (+3 more)
crates/nenjo/tests/: agents.rs  builtin_knowledge.rs  delegation.rs  memory.rs  routines.rs
crates/nenpm/: Cargo.toml  README.md
crates/nenpm/src/: content_path.rs  dependency.rs  error.rs  github.rs  install.rs  lib.rs  lockfile.rs  plan.rs  pm.rs  registry.rs  runtime_naming.rs  source.rs  validate.rs
crates/nenpm/tests/: artifact_integrity.rs  dependency_manifest.rs  install.rs  lockfile.rs  pm_commands.rs  registry_sources.rs  validate_prepare.rs
crates/platform/: Cargo.toml  README.md
crates/platform/src/: backend.rs  client.rs  knowledge_backend.rs  knowledge_contract.rs  lib.rs  library_knowledge.rs  manifest_contract.rs  manifest_kinds.rs  policy.rs  project_knowledge.rs  prompt_merge.rs  resource_ids.rs  scope.rs  task_tools.rs  tools.rs  types.rs
crates/secure-envelope/: Cargo.toml  README.md
crates/secure-envelope/src/: codec.rs  content.rs  lib.rs
crates/sessions/: Cargo.toml
crates/sessions/src/: checkpoint.rs  content.rs  coordinator.rs  lease.rs  lib.rs  runtime.rs  store.rs  trace.rs  transcript.rs  types.rs  updates.rs
crates/tool-api/: Cargo.toml  README.md
crates/tool-api/src/: async_ops.rs  lib.rs
crates/tools/: Cargo.toml  README.md
crates/tools/src/: browser.rs  browser_open.rs  content_search.rs  file_delete.rs  file_edit.rs  file_read.rs  file_write.rs  git_operations.rs  glob_search.rs  http_request.rs  lib.rs  memory.rs  memory_forget.rs  memory_recall.rs  memory_store.rs  screenshot.rs  security.rs  shell.rs  web_fetch.rs  web_search_tool.rs
crates/updater/: Cargo.toml  README.md
crates/updater/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: assembly.rs  bootstrap.rs  connector_egress_proxy.rs  event_bridge.rs  event_loop.rs  external_mcp.rs  lib.rs  local_documents.rs  marketplace.rs  package_manifests.rs  resource_resolver.rs  runtime.rs  skills.rs  task_runtime_adapter.rs
crates/worker/tests/: harness_storage.rs  manifest_black_box.rs
crates/xml/: Cargo.toml  README.md
crates/xml/src/: lib.rs  template.rs  types.rs
testing/integrations/: Cargo.toml
testing/integrations/tests/: agents.rs  builtin_knowledge_quality.rs  delegation.rs  memory.rs  routines.rs
(+263 files in other folders)
