[workspace]
resolver = "2"
members = [
    "crates/nenjo",
    "crates/worker",
    "crates/sessions",
    "crates/events",
    "crates/eventbus",
    "crates/tools",
    "crates/models",
    "crates/xml",
    "bin",
    "testing/integrations",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
authors = ["Boon Labs"]
license = "Apache-2.0"
repository = "https://github.com/nenjo-ai/nenjo"

[workspace.dependencies]
nenjo = { path = "crates/nenjo", version = "0.9.0" }
nenjo-xml = { path = "crates/xml", version = "0.9.0" }
nenjo-models = { path = "crates/models", version = "0.9.0" }
nenjo-tools = { path = "crates/tools", version = "0.9.0" }
nenjo-events = { path = "crates/events", version = "0.9.0" }
nenjo-eventbus = { path = "crates/eventbus", version = "0.9.0" }
nenjo-sessions = { path = "crates/sessions", version = "0.9.0" }
nenjo-worker = { path = "crates/worker" }
