[package]
name = "nenjo-crypto-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Worker crypto enrollment and content-key auth primitives"
readme = "README.md"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aes-gcm = { version = "0.10", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
hkdf = "0.12"
nenjo = { workspace = true }
nenjo-events = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.49", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1.21", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
tempfile = "3.25.0"
