[package]
name = "nenjo-eventbus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Transport-agnostic event bus for routing agentic AI workflow commands over NATS or custom transports"
readme = "README.md"
keywords = ["ai-agents", "eventbus", "nats", "orchestration", "transport"]
categories = ["asynchronous", "network-programming"]

[dependencies]
nenjo-events = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }

# NATS transport (optional)
async-nats = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
rustls = { workspace = true, default-features = false, features = ["ring"], optional = true }

[features]
default = []
nats = ["dep:async-nats", "dep:bytes", "dep:futures-util", "dep:rustls"]
