[package]
name = "nenjo-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed event definitions for agent-to-platform messaging in the Nenjo orchestration framework"
readme = "README.md"
keywords = ["ai-agents", "events", "messaging", "orchestration", "agentic"]
categories = ["encoding", "api-bindings"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["v4", "serde"] }
