[package]
name = "nenjo-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed event definitions for agent-to-platform messaging in the Nenjo orchestration framework"
readme = "README.md"
keywords = ["ai-agents", "events", "messaging", "orchestration", "agentic"]
categories = ["encoding", "api-bindings"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
