[package]
name = "nenjo-knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Knowledge pack primitives"
readme = "README.md"

[features]
default = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
nenjo-xml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tantivy = { workspace = true }
nenjo-tool-api = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
