[package]
name = "nenjo-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider trait and implementations — OpenAI, Anthropic, Gemini, OpenRouter, Ollama, and any OpenAI-compatible API"
readme = "README.md"
keywords = ["ai-agents", "llm", "openai", "anthropic", "model-provider"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
nenjo-tools = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["time"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
