[package]
name = "nenjo-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Nenjo platform-backed manifest operations"

[dependencies]
nenjo = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
