[package]
name = "nenjo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent orchestration SDK for building agentic AI workflows with tool use, memory, and multi-agent delegation"
readme = "README.md"
keywords = ["ai-agents", "llm", "orchestration", "agentic", "multi-agent"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
nenjo-models = { workspace = true }
nenjo-events = { workspace = true }
nenjo-tools = { workspace = true }
nenjo-xml = { workspace = true }
chrono = "0.4"
cron = "0.15"
bon = "3"
async-trait = "0.1"
tokio = { version = "1.49", features = ["sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
uuid = { version = "1.21", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.13", features = ["json"] }
thiserror = "2"
regex = "1.12"

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
