[package]
name = "nenjo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent orchestration SDK for building agentic AI workflows with tool use, memory, and multi-agent delegation"
readme = "README.md"
keywords = ["ai-agents", "llm", "orchestration", "agentic", "multi-agent"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
nenjo-knowledge = { workspace = true }
nenjo-models = { workspace = true }
nenjo-events = { workspace = true }
nenjo-xml = { workspace = true }
tool-api = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
bon = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
futures-util = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
