[package]
name = "nenjo-nenpm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Nenjo package manager install planning"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
nenjo = { workspace = true }
nenjo-packages = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }
