[package]
name = "nenjo-secure-envelope"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Secure envelope wrapper over nenjo-eventbus"
readme = "README.md"

[dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22.1"
nenjo-crypto-auth = { workspace = true }
nenjo-eventbus = { workspace = true }
nenjo-events = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.21", features = ["v4", "serde"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.49", features = ["sync", "macros", "rt"] }
