[package]
name = "nenjo-secure-envelope"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Secure envelope wrapper over nenjo-eventbus"
readme = "README.md"

[dependencies]
aes-gcm = { workspace = true, features = ["std"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
nenjo-crypto-auth = { workspace = true }
nenjo-eventbus = { workspace = true }
nenjo-events = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
