[package]
name = "nenjo-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool trait, types, and built-in tool implementations for the Nenjo agent platform"
readme = "README.md"
keywords = ["ai-agents", "tools", "llm", "function-calling", "agentic"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Async runtime (process, fs, time)
tokio = { workspace = true, features = ["process", "fs", "time", "sync", "macros", "rt-multi-thread"] }

# HTTP client
reqwest = { workspace = true, features = ["json", "stream"] }
futures-util = { workspace = true }

# Search / pattern matching
regex = { workspace = true }
which = { workspace = true }
glob = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# Concurrency
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }

# HTML to text
nanohtml2text = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# Temp files (for tests)
tempfile = { workspace = true }
