[package]
name = "nenjo-updater"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Nenjo binary bundle updater"
repository.workspace = true

[dependencies]
directories = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

