[package]
name = "nenjo-xml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "XML serialization and template rendering for structured LLM prompt context"
readme = "README.md"
keywords = ["ai-agents", "xml", "templates", "prompts", "context-engineering"]
categories = ["template-engine", "encoding"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
minijinja = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
