[package]
name = "nenjo-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[[test]]
name = "agents"
path = "tests/agents.rs"

[[test]]
name = "delegation"
path = "tests/delegation.rs"

[[test]]
name = "memory"
path = "tests/memory.rs"

[[test]]
name = "routines"
path = "tests/routines.rs"

[dependencies]
nenjo = { workspace = true }
nenjo-models = { workspace = true }
nenjo-tools = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.21", features = ["v4"] }
