[package]
name = "nenjo-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[[test]]
name = "agents"
path = "tests/agents.rs"

[[test]]
name = "delegation"
path = "tests/delegation.rs"

[[test]]
name = "memory"
path = "tests/memory.rs"

[[test]]
name = "routines"
path = "tests/routines.rs"

[[test]]
name = "builtin_knowledge_quality"
path = "tests/builtin_knowledge_quality.rs"

[dependencies]
nenjo = { workspace = true }
nenjo-models = { workspace = true }
nenjo-tools = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
